--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -101,6 +101,7 @@ $facebook-color             : $social-color;
 $flickr-color               : $social-color;
 $foursquare-color           : $social-color;
 $github-color               : $social-color;
+$gitlab-color               : $social-color;
 $google-plus-color          : $social-color;
 $instagram-color            : $social-color;
 $lastfm-color               : $social-color;
