--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -86,7 +86,7 @@ $warning-color              : #c3284d !default;
 $danger-color               : #ee5f5b !default;
 $info-color                 : #52adc8 !default;
 
-$gradient                   : top, #b827fc 0%, #2c90fc 13%, #b8fd33 25%, #fec837 36%, #fd1892 50%, #fec837 63%, #b8fd33 75%, #2c90fc 88%, #b827fc 100%;
+$gradient                   : top, #fd1892 0%, #fec837 13%, #b8fd33 25%, #2c90fc 36%, #b827fc 50%, #2c90fc 63%, #b8fd33 75%, #fec837 88%, #fd1892 100%;
 $rainbow                    : #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%;
 
 /* YIQ color contrast */
