fix missing reddit-color var

--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -111,6 +111,7 @@ $lastfm-color               : $social-color;
 $linkedin-color             : $social-color;
 $mastodon-color             : $social-color;
 $pinterest-color            : $social-color;
+$reddit-color               : $social-color;
 $rss-color                  : $social-color;
 $soundcloud-color           : $social-color;
 $stackoverflow-color        : $social-color;
