--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -62,6 +62,9 @@
   .archive__subtitle {
     margin: 0.3em 0 0;
   }
+  h3.archive__subtitle {
+    margin: 1.3em 0 0;
+  }
 }
 
 .archive__item-title {
