--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -161,6 +161,8 @@ $medium                     : 768px !default;
 $medium-wide                : 900px !default;
 $large                      : 1024px !default;
 $x-large                    : 1280px !default;
+$xx-large                   : 1516px !default;
+$xxx-large                  : 1824px !default;
 
 /*
    Grid
