css fixes after merge

--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -22,7 +22,7 @@
   margin-bottom: 0;
 }
 
-.search__toggle {
+button.search__toggle {
   margin-left: 1rem;
   margin-right: 1rem;
   height: $nav-toggle-height;
