--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -6,7 +6,7 @@
    Breadcrumb navigation links
    ========================================================================== */
 
-   .breadcrumbs {
+  .breadcrumbs {
     @include clearfix;
     margin: 0 auto;
     max-width: 100%;
@@ -31,7 +31,8 @@
       padding: 0;
       list-style: none;
       font-size: $type-size-6;
-
+    }
+    
     @include breakpoint($large) {
       float: right;
       width: calc(100% - #{$right-sidebar-width-narrow});
