--- a/_includes/analytics-providers/piwik.html
+++ b/_includes/analytics-providers/piwik.html
@@ -4,7 +4,7 @@
 <!-- https://piwik.holgerkral.de/index.php?module=PrivacyManager&action=consent&idSite=2&period=day&date=yesterday&showtitle=1&random=7452 -->
 <!-- Matomo -->
 <script type="text/javascript">
-  var _paq = _paq || [];
+  var _paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   var cookieStr = 'cookieconsent_status'; 
   var disableStr = cookieStr + '=deny'; 
