--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -43,7 +43,7 @@
           {% unless page.comments_locked == true %}
           <div id="respond" class="no-print">
           <h2 id="respond-head" class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label | default: "Leave a Comment" }} <small class="comment-form-cancel-comment"><a rel="nofollow" id="cancel-comment-reply-link" href="{{ page.url | absolute_url }}#respond" style="display:none;">{{ site.data.ui-text[site.locale].comment_cancel_reply | default: "Cancel reply" }}</a></small></h2>
-          <form id="comment-form" class="page__comments-form js-form form" method="post" action="https://api.staticman.net/v3/entry/github/{{ site.repository }}/{{ site.staticman.branch }}/comments">
+          <form id="comment-form" class="page__comments-form js-form form" method="post" action="{{ site.staticman.endpoint | default: 'https://api.staticman.net/v2/entry/' }}{{ site.repository }}/{{ site.staticman.branch }}/comments">
             <div class="form__spinner">
               <i class="fas fa-spinner fa-spin fa-3x fa-fw"></i>
               <span class="sr-only">{{ site.data.ui-text[site.locale].loading_label | default: "Loading..." }}</span>
