--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,4 +1,4 @@
-<article id="comment{{ include.index }}" class="js-comment comment" itemprop="comment" itemscope itemtype="https://schema.org/Comment">
+<article id="comment-{{ include.index }}" class="js-comment comment" itemprop="comment" itemscope itemtype="https://schema.org/Comment">
   <div class="comment__avatar-wrapper">
     {% if include.avatar %}
       <img class="comment__avatar" src="{{ include.avatar }}" alt="{{ include.name | escape }}">
@@ -18,7 +18,7 @@
     </h3>
     <p class="comment__date">
       {% if include.date %}
-        {% if include.index %}<a href="#comment{{ include.index }}" itemprop="url">{% endif %}
+        {% if include.index %}<a href="#comment-{{ include.index }}" itemprop="url">{% endif %}
         <time datetime="{{ include.date | date_to_xmlschema }}" itemprop="datePublished">{{ include.date | date: "%B %d, %Y at %I:%M %p" }}</time>
         {% if include.index %}</a>{% endif %}
       {% endif %}
