--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -22,19 +22,18 @@
                 {% endif %}
                 {{ site.data.ui-text[site.locale].comments_title | default: "Comments" }}
               </h2>
-              {% assign comments = site.data.comments[page.slug] | where_exp: 'item', 'item.replying_to == blank' %}
-                {% for comment in comments %}
-                  {% assign index       = forloop.index %}
-                  {% assign r           = comment.replying_to %}
-                  {% assign replying_to = r | to_integer %}
-                  {% assign avatar      = comment.avatar %}
-                  {% assign email       = comment.email %}
-                  {% assign name        = comment.name %}
-                  {% assign url         = comment.url %}
-                  {% assign date        = comment.date %}
-                  {% assign message     = comment.message %}
-                  {% include comment.html index=forloop.index replying_to=replying_to avatar=avatar email=email name=name url=url date=date message=message %}
-                {% endfor %}
+              {% assign comments = site.data.comments[page.slug] | sort | where_exp: 'comment', 'comment[1].replying_to == blank' %}
+              {% for comment in comments %}
+                {% assign index       = forloop.index %}
+                {% assign replying_to = comment[1].replying_to | to_integer %}
+                {% assign avatar      = comment[1].avatar %}
+                {% assign email       = comment[1].email %}
+                {% assign name        = comment[1].name %}
+                {% assign url         = comment[1].url %}
+                {% assign date        = comment[1].date %}
+                {% assign message     = comment[1].message %}
+                {% include comment.html index=index replying_to=replying_to avatar=avatar email=email name=name url=url date=date message=message %}
+              {% endfor %}
             {% endif %}
           </div>
           <!-- End static comments -->
