--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -81,6 +81,14 @@
         </li>
       {% endif %}
 
+      {% if author.mastodon %}
+        <li>
+          <a href="{{ author.mastodon }}" itemprop="sameAs" rel="me nofollow noopener noreferrer">
+            <i class="fab fa-fw fa-mastodon" aria-hidden="true"></i> Mastodon
+          </a>
+        </li>
+      {% endif %}
+
       {% if author.twitter %}
         <li>
           <a href="https://twitter.com/{{ author.twitter }}" itemprop="sameAs" rel="nofollow noopener noreferrer">
